--- a/public/style.css
+++ b/public/style.css
@@ -37,6 +37,48 @@
   padding: 15px;
 }
 
+@-webkit-keyframes scale-in {
+  from {
+    -webkit-transform: scale(0.8);
+            transform: scale(0.8);
+  }
+  to {
+    -webkit-transform: scale(1);
+            transform: scale(1);
+  }
+}
+
+@keyframes scale-in {
+  from {
+    -webkit-transform: scale(0.8);
+            transform: scale(0.8);
+  }
+  to {
+    -webkit-transform: scale(1);
+            transform: scale(1);
+  }
+}
+
+.indicator {
+  display: inline-block;
+  width: 90px;
+  height: 90px;
+  font-size: 50px;
+  color: white;
+  line-height: 90px;
+  border-radius: 50%;
+  animation-name: scale-in;
+  animation-duration: 300ms;
+}
+
+.indicator.true {
+  background-color: green;
+}
+
+.indicator.false {
+  background-color: red;
+}
+
 .card-footer {
   padding: 15px;
 }
